--- a/index.html
+++ b/index.html
@@ -1,16 +1,52 @@
+<!DOCTYPE html>
 <html>
+    <title>Simple Interest Calculator</title>
     <head>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
     </head>
     <body>
+    <div class = "maindiv">
         <h1>Simple Interest Calculator</h1>
+        <form action ="" id= "mainform">
+            <table class = "center">
+                <tr><td><label for="amount">Amount</label></td>
+                    <td><input type= "text" id="principal"></td></tr>
+        
+                <tr><td><label for="interest Rate">Interest Rate</label></td>
+                   <td><input type="range" min = "1" max ="20" step="0.25" value ="10.25" id ="rate" onchange="updateRate()"><!--Link updateRate function to range input with "onchange" event -->
+                   <span id="rate_val">10.25%</span><!--Display the default rate as 10.25%-->
+                      </td></tr>
 
-        Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="number"  id="rate">  <br/>
-        No. of Years <input type="number"  id="years">  <br/>
-        Interest : <span id="result"></span><br>
 
-        <button onclick="compute()">Compute</button>
+                <tr><td> No. of Years</td><!--Select No. of years into dropdown box with option 1 to 10 -->
+                    <td><select id = "years">
+                        <option value ="1">1</option>
+                        <option value ="2">2</option>
+                        <option value ="3">3</option>
+                        <option value ="4">4</option>
+                        <option value ="5">5</option>
+                        <option value ="6">6</option>
+                        <option value ="7">7</option>
+                        <option value ="8">8</option>
+                        <option value ="9">9</option>
+                        <option value ="10">10</option>
+                    </select></td></tr>
+
+
+
+                <tr><td><button onclick = "compute();return false;">Compute Interest</button></td></tr>
+            </table>
+        </form>
+
+        <span id ="result"> </span>
+
+
+        <br>
+    
+    <footer>&#169;Everyone Can Get Rich</footer>
+
+    </div>
+
     </body>
 </html>
